2 commit - add security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.datasource.username=postgres
 spring.datasource.password=1111
 spring.jpa.generate-ddl=true
 
+spring.mustache.expose-request-attributes=true
+
 
